crates/glyim-test/src/snapshot/snapshots/glyim_test__snapshot__snapshot_cst@pub_super_struct.snap
---
source: crates/glyim-test/src/snapshot/mod.rs
expression: tree
---
SourceFile@0..20
  Visibility@0..10
    KwPub@0..3 "pub"
    LParen@3..4 "("
    VisSuper@4..9
      KwSuper@4..9 "super"
    RParen@9..10 ")"
  Whitespace@10..11 " "
  StructDef@11..20
    KwStruct@11..17 "struct"
    Whitespace@17..18 " "
    Ident@18..19 "S"
    Semicolon@19..20 ";"
