crates/glyim-test/src/snapshot/snapshots/glyim_test__snapshot__snapshot_cst@range_pattern_inclusive.snap
---
source: crates/glyim-test/src/snapshot/mod.rs
expression: tree
---
SourceFile@0..37
  FnDef@0..37
    KwFn@0..2 "fn"
    Whitespace@2..3 " "
    Ident@3..7 "main"
    LParen@7..8 "("
    RParen@8..9 ")"
    Whitespace@9..10 " "
    Block@10..37
      LBrace@10..11 "{"
      Whitespace@11..12 " "
      ExprStmt@12..36
        MatchExpr@12..35
          KwMatch@12..17 "match"
          Whitespace@17..18 " "
          PathExpr@18..20
            UsePath@18..20
              Ident@18..19 "x"
              Whitespace@19..20 " "
          LBrace@20..21 "{"
          MatchArmList@21..34
            Whitespace@21..22 " "
            MatchArm@22..34
              PatRange@22..28
                IntLit@22..23 "0"
                DotDotEq@23..26 "..="
                PatLit@26..28
                  IntLit@26..27 "9"
                  Whitespace@27..28 " "
              FatArrow@28..30 "=>"
              Whitespace@30..31 " "
              Block@31..33
                LBrace@31..32 "{"
                RBrace@32..33 "}"
              Whitespace@33..34 " "
          RBrace@34..35 "}"
        Whitespace@35..36 " "
      RBrace@36..37 "}"
