crates/glyim-test/src/snapshot/snapshots/glyim_test__snapshot__snapshot_cst@trait_full.snap
---
source: crates/glyim-test/src/snapshot/mod.rs
expression: tree
---
SourceFile@0..215
  Whitespace@0..1 "\n"
  Visibility@1..5
    KwPub@1..4 "pub"
    Whitespace@4..5 " "
  TraitDef@5..214
    KwTrait@5..10 "trait"
    Whitespace@10..11 " "
    Ident@11..19 "Iterator"
    Whitespace@19..20 " "
    LBrace@20..21 "{"
    Whitespace@21..26 "\n    "
    TypeAlias@26..36
      KwType@26..30 "type"
      Whitespace@30..31 " "
      Ident@31..35 "Item"
      Semicolon@35..36 ";"
    Whitespace@36..41 "\n    "
    FnDef@41..82
      KwFn@41..43 "fn"
      Whitespace@43..44 " "
      Ident@44..48 "next"
      LParen@48..49 "("
      ParamList@49..58
        Param@49..58
          And@49..50 "&"
          KwMut@50..53 "mut"
          Whitespace@53..54 " "
          RefType@54..58
            PathType@54..58
              UsePath@54..58
                KwSelf@54..58 "self"
      RParen@58..59 ")"
      Whitespace@59..60 " "
      Arrow@60..62 "->"
      Whitespace@62..63 " "
      PathType@63..81
        UsePath@63..69
          Ident@63..69 "Option"
        Lt@69..70 "<"
        PathType@70..80
          UsePath@70..80
            Ident@70..74 "Self"
            ColonColon@74..76 "::"
            Ident@76..80 "Item"
        Gt@80..81 ">"
      Semicolon@81..82 ";"
    Whitespace@82..87 "\n    "
    FnDef@87..134
      KwFn@87..89 "fn"
      Whitespace@89..90 " "
      Ident@90..95 "count"
      LParen@95..96 "("
      ParamList@96..100
        Param@96..100
          KwSelf@96..100 "self"
      RParen@100..101 ")"
      Whitespace@101..102 " "
      Arrow@102..104 "->"
      Whitespace@104..105 " "
      PathType@105..111
        UsePath@105..111
          Ident@105..110 "usize"
          Whitespace@110..111 " "
      WhereClause@111..129
        KwWhere@111..116 "where"
        WherePredicate@116..129
          Whitespace@116..117 " "
          PathType@117..121
            UsePath@117..121
              Ident@117..121 "Self"
          Colon@121..122 ":"
          Bound@122..129
            Whitespace@122..123 " "
            PathType@123..129
              UsePath@123..129
                Ident@123..128 "Sized"
                Whitespace@128..129 " "
      Block@129..134
        LBrace@129..130 "{"
        Whitespace@130..131 " "
        ExprStmt@131..133
          LitExpr@131..132
            IntLit@131..132 "0"
          Whitespace@132..133 " "
        RBrace@133..134 "}"
    Whitespace@134..139 "\n    "
    FnDef@139..212
      KwFn@139..141 "fn"
      Whitespace@141..142 " "
      Ident@142..145 "map"
      TypeParamList@145..151
        Lt@145..146 "<"
        TypeParam@146..147
          Ident@146..147 "B"
        Comma@147..148 ","
        Whitespace@148..149 " "
        TypeParam@149..150
          Ident@149..150 "F"
        Gt@150..151 ">"
      LParen@151..152 "("
      ParamList@152..162
        Param@152..156
          KwSelf@152..156 "self"
        Comma@156..157 ","
        Whitespace@157..158 " "
        Param@158..162
          Ident@158..159 "f"
          Colon@159..160 ":"
          Whitespace@160..161 " "
          PathType@161..162
            UsePath@161..162
              Ident@161..162 "F"
      RParen@162..163 ")"
      Whitespace@163..164 " "
      Arrow@164..166 "->"
      Whitespace@166..167 " "
      PathType@167..180
        UsePath@167..170
          Ident@167..170 "Map"
        Lt@170..171 "<"
        PathType@171..175
          UsePath@171..175
            Ident@171..175 "Self"
        Comma@175..176 ","
        Whitespace@176..177 " "
        PathType@177..178
          UsePath@177..178
            Ident@177..178 "F"
        Gt@178..179 ">"
        Whitespace@179..180 " "
      WhereClause@180..211
        KwWhere@180..185 "where"
        WherePredicate@185..211
          Whitespace@185..186 " "
          PathType@186..187
            UsePath@186..187
              Ident@186..187 "F"
          Colon@187..188 ":"
          Bound@188..211
            Whitespace@188..189 " "
            PathType@189..211
              UsePath@189..194
                Ident@189..194 "FnMut"
              GenericArgList@194..206
                LParen@194..195 "("
                PathType@195..205
                  UsePath@195..205
                    Ident@195..199 "Self"
                    ColonColon@199..201 "::"
                    Ident@201..205 "Item"
                RParen@205..206 ")"
              Whitespace@206..207 " "
              Arrow@207..209 "->"
              Whitespace@209..210 " "
              PathType@210..211
                UsePath@210..211
                  Ident@210..211 "B"
      Semicolon@211..212 ";"
    Whitespace@212..213 "\n"
    RBrace@213..214 "}"
  Whitespace@214..215 "\n"
