crates/glyim-test/src/snapshot/snapshots/glyim_test__snapshot__snapshot_cst@where_multiple_predicates.snap
---
source: crates/glyim-test/src/snapshot/mod.rs
expression: tree
---
SourceFile@0..42
  FnDef@0..42
    KwFn@0..2 "fn"
    Whitespace@2..3 " "
    Ident@3..6 "baz"
    TypeParamList@6..12
      Lt@6..7 "<"
      TypeParam@7..8
        Ident@7..8 "T"
      Comma@8..9 ","
      Whitespace@9..10 " "
      TypeParam@10..11
        Ident@10..11 "U"
      Gt@11..12 ">"
    LParen@12..13 "("
    RParen@13..14 ")"
    Whitespace@14..15 " "
    WhereClause@15..40
      KwWhere@15..20 "where"
      WherePredicate@20..29
        Whitespace@20..21 " "
        PathType@21..22
          UsePath@21..22
            Ident@21..22 "T"
        Colon@22..23 ":"
        Bound@23..29
          Whitespace@23..24 " "
          PathType@24..29
            UsePath@24..29
              Ident@24..29 "Clone"
      Comma@29..30 ","
      Whitespace@30..31 " "
      WherePredicate@31..40
        PathType@31..32
          UsePath@31..32
            Ident@31..32 "U"
        Colon@32..33 ":"
        Bound@33..40
          Whitespace@33..34 " "
          PathType@34..40
            UsePath@34..40
              Ident@34..39 "Debug"
              Whitespace@39..40 " "
    Block@40..42
      LBrace@40..41 "{"
      RBrace@41..42 "}"
