crates/glyim-test/src/snapshot/snapshots/glyim_test__snapshot__snapshot_cst@where_single_bound.snap
---
source: crates/glyim-test/src/snapshot/mod.rs
expression: tree
---
SourceFile@0..29
  FnDef@0..29
    KwFn@0..2 "fn"
    Whitespace@2..3 " "
    Ident@3..6 "foo"
    TypeParamList@6..9
      Lt@6..7 "<"
      TypeParam@7..8
        Ident@7..8 "T"
      Gt@8..9 ">"
    LParen@9..10 "("
    RParen@10..11 ")"
    Whitespace@11..12 " "
    WhereClause@12..27
      KwWhere@12..17 "where"
      WherePredicate@17..27
        Whitespace@17..18 " "
        PathType@18..19
          UsePath@18..19
            Ident@18..19 "T"
        Colon@19..20 ":"
        Bound@20..27
          Whitespace@20..21 " "
          PathType@21..27
            UsePath@21..27
              Ident@21..26 "Clone"
              Whitespace@26..27 " "
    Block@27..29
      LBrace@27..28 "{"
      RBrace@28..29 "}"
